--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
       <div id="display"><span>0.00</span></div>
       <div id="buttons">
         <div id="left-column">
-          <button class="number">1</button>
-          <button class="number">2</button>
-          <button class="number">3</button>
-          <button class="number">4</button>
-          <button class="number">5</button>
-          <button class="number">6</button>
-          <button class="number">7</button>
-          <button class="number">8</button>
-          <button class="number">9</button>
-          <button class="number">0</button>
-          <button id="clear">C</button>
-          <button id="equals">=</button>
-          <button id="delete">
+          <button class="number" data-value="1">1</button>
+          <button class="number" data-value="2">2</button>
+          <button class="number" data-value="3">3</button>
+          <button class="number" data-value="4">4</button>
+          <button class="number" data-value="5">5</button>
+          <button class="number" data-value="6">6</button>
+          <button class="number" data-value="7">7</button>
+          <button class="number" data-value="8">8</button>
+          <button class="number" data-value="9">9</button>
+          <button class="number" data-value="0">0</button>
+          <button id="clear" data-value="clear">C</button>
+          <button id="equals" data-value="=">=</button>
+          <button id="delete" data-value="backspace">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               height="30px"
@@ -39,7 +39,7 @@
           </button>
         </div>
         <div id="right-column">
-          <button id="plus" class="operation">+</button>
+          <button id="plus" class="operation" data-value="+">+</button>
           <button id="minus" class="operation">-</button>
           <button id="multiply" class="operation">*</button>
           <button id="divide" class="operation">/</button>
